--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,7 +5,7 @@ env:
   REGISTRY_GITHUB: ghcr.io
   REGISTRY_DOCKER: index.docker.io
   GH_IMAGE_NAME: ${{ github.repository }}
-  GH_IMAGE_NAME: ${{CI_REGISTRY_IMAGE}}
+  CI_REGISTRY_IMAGE: ${{ github.repository }}
   PLATFORMS: "linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8"
 # permissions are needed if pushing to ghcr.io
 permissions:
