--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -85,7 +85,7 @@ jobs:
         run: docker image ls
       - name: build images
 #        run: sudo /bin/bash -c "export REGISTRY_PASSWORD=$REGISTRY_PASSWORD;export REGISTRY_HOST=docker.io;export REGISTRY_PROJECT=thefoundation;export PROJECT_NAME=hocker;export REGISTRY_USER=${{ secrets.REGISTRY_USER }} ;bash _build_hocker.sh base-focal "
-        run: (echo FILE > /tmp/.file;echo FROM scratch;echo COPY /tmp/.file / ) | 	docker buildx build --platform ${PLATFORMS}  --pull --cache-to=type=registry,ref=$CI_REGISTRY_IMAGE:zzz_buildcache_scratch --cache-from=type=registry,ref=$CI_REGISTRY_IMAGE:zzz_buildcache_scratch -t $CI_REGISTRY_IMAGE:scratch --push  -f /dev/stdin .
+        run: ((echo FILE > /tmp/.file;echo FROM scratch;echo COPY /tmp/.file / ) > /tmp/Dfile ) && 	docker buildx build --platform ${PLATFORMS}  --pull --cache-to=type=registry,ref=$CI_REGISTRY_IMAGE:zzz_buildcache_scratch --cache-from=type=registry,ref=$CI_REGISTRY_IMAGE:zzz_buildcache_scratch -t $CI_REGISTRY_IMAGE:scratch --push  -f /tmp/Dfile .
       - name: show files
 #        run: bash -c "ls buildlogs/  -lh1 ; tail -n 20 buildlogs/*"
         run: docker image ls 
