--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -83,6 +83,18 @@ jobs:
         run: echo ${{ steps.buildx.outputs.platforms }}
       - name: current images
         run: docker image ls
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: build images
 #        run: sudo /bin/bash -c "export REGISTRY_PASSWORD=$REGISTRY_PASSWORD;export REGISTRY_HOST=docker.io;export REGISTRY_PROJECT=thefoundation;export PROJECT_NAME=hocker;export REGISTRY_USER=${{ secrets.REGISTRY_USER }} ;bash _build_hocker.sh base-focal "
         run: ((echo FILE > .file;echo FROM scratch;echo COPY .file / ) > /tmp/Dfile ) && 	docker buildx build --platform ${PLATFORMS}  --pull --cache-to=type=registry,ref=$CI_REGISTRY_IMAGE:zzz_buildcache_scratch --cache-from=type=registry,ref=$CI_REGISTRY_IMAGE:zzz_buildcache_scratch -t $CI_REGISTRY_IMAGE:scratch --push  -f /tmp/Dfile .
