--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -86,8 +86,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v2
